fix card scrollbar and disign

--- a/public/main.css
+++ b/public/main.css
@@ -38,7 +38,7 @@ div.box a:hover {
   min-height: 150px;
   margin: auto 10px;
   overflow-wrap: break-word;
-  width: 200px;
+  min-width: 150px;
   justify-content: center;
   border: 1px solid black;
   align-items: center;
